# ComfyUI_ezXY

./: .gitignore  README.md  __init__.py  autoCastPatch.ipynb  autoCastPatch.py  config.yaml  ezNodes.ipynb  ezNodes.py  pyproject.toml  requirements.txt
js/: ezExtension.js
