[project]
name = "comfyui_ezxy"
description = "Extensions/Patches: Enables linking float and integer inputs and ouputs. Values are automatically cast to the correct type and clamped to the correct range. Works with both builtin and custom nodes.[w/NOTE: This repo patches ComfyUI's validate_inputs and map_node_over_list functions while running. May break depending on your version of ComfyUI. Can be deactivated in config.yaml.]Nodes: A collection of nodes for facilitating the generation of XY plots. Capable of plotting changes over most primitive values."
version = "1.0.0"
license = "LICENSE"
dependencies = ["pprint", "numpy", "torch", "cv2"]

[project.urls]
Repository = "https://github.com/GMapeSplat/ComfyUI_ezXY"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ezXY"
Icon = ""
